Fix footer links spacing

--- a/src/TeamTavern/Client/Components/Footer.scss
+++ b/src/TeamTavern/Client/Components/Footer.scss
@@ -31,7 +31,11 @@
             width: unset;
         }
     }
+}
 
+.footer-content-links {
+    display: flex;
+    gap: 21px;
 }
 
 .footer-icon {
